travail/2e_semestre/datamining/tps/projet/logic/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> calc
Rule 1     calc -> exp
Rule 2     exp -> ADD modify
Rule 3     exp -> DELETE fact2
Rule 4     exp -> DELETE RULES numlist
Rule 5     numlist -> NUM numlist
Rule 6     numlist -> <empty>
Rule 7     exp -> CHECK logalg
Rule 8     exp -> DISPLAY logalg
Rule 9     exp -> CHECK RULES
Rule 10    exp -> CHECK LINKS
Rule 11    exp -> CHECK NODES
Rule 12    modify -> fact
Rule 13    modify -> rule
Rule 14    fact -> ENT ENT ENT
Rule 15    fact -> NOT ENT ENT ENT
Rule 16    fact -> ENT NOT ENT ENT
Rule 17    fact -> ENT ENT NOT ENT
Rule 18    rule -> IF logalg2 THEN conj2
Rule 19    logalg2 -> fact3 more2
Rule 20    logalg -> fact2 more
Rule 21    more -> op fact2 more
Rule 22    more2 -> op2 fact3 more2
Rule 23    more -> <empty>
Rule 24    more2 -> <empty>
Rule 25    op -> AND
Rule 26    op -> OR
Rule 27    op2 -> AND
Rule 28    op2 -> OR
Rule 29    conj2 -> fact3 moreconj2
Rule 30    moreconj2 -> AND fact3 moreconj2
Rule 31    moreconj2 -> <empty>
Rule 32    fact2 -> el el el
Rule 33    fact3 -> el el el
Rule 34    el -> ENT
Rule 35    el -> NOT ENT
Rule 36    el -> VAR

Terminals, with rules where they appear

ADD                  : 2
AND                  : 25 27 30
CHECK                : 7 9 10 11
DELETE               : 3 4
DISPLAY              : 8
ENT                  : 14 14 14 15 15 15 16 16 16 17 17 17 34 35
IF                   : 18
LINKS                : 10
NODES                : 11
NOT                  : 15 16 17 35
NUM                  : 5
OR                   : 26 28
RULES                : 4 9
THEN                 : 18
VAR                  : 36
error                : 

Nonterminals, with rules where they appear

calc                 : 0
conj2                : 18
el                   : 32 32 32 33 33 33
exp                  : 1
fact                 : 12
fact2                : 3 20 21
fact3                : 19 22 29 30
logalg               : 7 8
logalg2              : 18
modify               : 2
more                 : 20 21
more2                : 19 22
moreconj2            : 29 30
numlist              : 4 5
op                   : 21
op2                  : 22
rule                 : 13

Parsing method: LALR

state 0

    (0) S' -> . calc
    (1) calc -> . exp
    (2) exp -> . ADD modify
    (3) exp -> . DELETE fact2
    (4) exp -> . DELETE RULES numlist
    (7) exp -> . CHECK logalg
    (8) exp -> . DISPLAY logalg
    (9) exp -> . CHECK RULES
    (10) exp -> . CHECK LINKS
    (11) exp -> . CHECK NODES

    ADD             shift and go to state 3
    DELETE          shift and go to state 4
    CHECK           shift and go to state 5
    DISPLAY         shift and go to state 6

    calc                           shift and go to state 1
    exp                            shift and go to state 2

state 1

    (0) S' -> calc .



state 2

    (1) calc -> exp .

    $end            reduce using rule 1 (calc -> exp .)


state 3

    (2) exp -> ADD . modify
    (12) modify -> . fact
    (13) modify -> . rule
    (14) fact -> . ENT ENT ENT
    (15) fact -> . NOT ENT ENT ENT
    (16) fact -> . ENT NOT ENT ENT
    (17) fact -> . ENT ENT NOT ENT
    (18) rule -> . IF logalg2 THEN conj2

    ENT             shift and go to state 10
    NOT             shift and go to state 11
    IF              shift and go to state 12

    modify                         shift and go to state 7
    fact                           shift and go to state 8
    rule                           shift and go to state 9

state 4

    (3) exp -> DELETE . fact2
    (4) exp -> DELETE . RULES numlist
    (32) fact2 -> . el el el
    (34) el -> . ENT
    (35) el -> . NOT ENT
    (36) el -> . VAR

    RULES           shift and go to state 14
    ENT             shift and go to state 16
    NOT             shift and go to state 17
    VAR             shift and go to state 18

    fact2                          shift and go to state 13
    el                             shift and go to state 15

state 5

    (7) exp -> CHECK . logalg
    (9) exp -> CHECK . RULES
    (10) exp -> CHECK . LINKS
    (11) exp -> CHECK . NODES
    (20) logalg -> . fact2 more
    (32) fact2 -> . el el el
    (34) el -> . ENT
    (35) el -> . NOT ENT
    (36) el -> . VAR

    RULES           shift and go to state 20
    LINKS           shift and go to state 21
    NODES           shift and go to state 22
    ENT             shift and go to state 16
    NOT             shift and go to state 17
    VAR             shift and go to state 18

    logalg                         shift and go to state 19
    fact2                          shift and go to state 23
    el                             shift and go to state 15

state 6

    (8) exp -> DISPLAY . logalg
    (20) logalg -> . fact2 more
    (32) fact2 -> . el el el
    (34) el -> . ENT
    (35) el -> . NOT ENT
    (36) el -> . VAR

    ENT             shift and go to state 16
    NOT             shift and go to state 17
    VAR             shift and go to state 18

    logalg                         shift and go to state 24
    fact2                          shift and go to state 23
    el                             shift and go to state 15

state 7

    (2) exp -> ADD modify .

    $end            reduce using rule 2 (exp -> ADD modify .)


state 8

    (12) modify -> fact .

    $end            reduce using rule 12 (modify -> fact .)


state 9

    (13) modify -> rule .

    $end            reduce using rule 13 (modify -> rule .)


state 10

    (14) fact -> ENT . ENT ENT
    (16) fact -> ENT . NOT ENT ENT
    (17) fact -> ENT . ENT NOT ENT

    ENT             shift and go to state 25
    NOT             shift and go to state 26


state 11

    (15) fact -> NOT . ENT ENT ENT

    ENT             shift and go to state 27


state 12

    (18) rule -> IF . logalg2 THEN conj2
    (19) logalg2 -> . fact3 more2
    (33) fact3 -> . el el el
    (34) el -> . ENT
    (35) el -> . NOT ENT
    (36) el -> . VAR

    ENT             shift and go to state 16
    NOT             shift and go to state 17
    VAR             shift and go to state 18

    logalg2                        shift and go to state 28
    fact3                          shift and go to state 29
    el                             shift and go to state 30

state 13

    (3) exp -> DELETE fact2 .

    $end            reduce using rule 3 (exp -> DELETE fact2 .)


state 14

    (4) exp -> DELETE RULES . numlist
    (5) numlist -> . NUM numlist
    (6) numlist -> .

    NUM             shift and go to state 32
    $end            reduce using rule 6 (numlist -> .)

    numlist                        shift and go to state 31

state 15

    (32) fact2 -> el . el el
    (34) el -> . ENT
    (35) el -> . NOT ENT
    (36) el -> . VAR

    ENT             shift and go to state 16
    NOT             shift and go to state 17
    VAR             shift and go to state 18

    el                             shift and go to state 33

state 16

    (34) el -> ENT .

    ENT             reduce using rule 34 (el -> ENT .)
    NOT             reduce using rule 34 (el -> ENT .)
    VAR             reduce using rule 34 (el -> ENT .)
    $end            reduce using rule 34 (el -> ENT .)
    AND             reduce using rule 34 (el -> ENT .)
    OR              reduce using rule 34 (el -> ENT .)
    THEN            reduce using rule 34 (el -> ENT .)


state 17

    (35) el -> NOT . ENT

    ENT             shift and go to state 34


state 18

    (36) el -> VAR .

    ENT             reduce using rule 36 (el -> VAR .)
    NOT             reduce using rule 36 (el -> VAR .)
    VAR             reduce using rule 36 (el -> VAR .)
    $end            reduce using rule 36 (el -> VAR .)
    AND             reduce using rule 36 (el -> VAR .)
    OR              reduce using rule 36 (el -> VAR .)
    THEN            reduce using rule 36 (el -> VAR .)


state 19

    (7) exp -> CHECK logalg .

    $end            reduce using rule 7 (exp -> CHECK logalg .)


state 20

    (9) exp -> CHECK RULES .

    $end            reduce using rule 9 (exp -> CHECK RULES .)


state 21

    (10) exp -> CHECK LINKS .

    $end            reduce using rule 10 (exp -> CHECK LINKS .)


state 22

    (11) exp -> CHECK NODES .

    $end            reduce using rule 11 (exp -> CHECK NODES .)


state 23

    (20) logalg -> fact2 . more
    (21) more -> . op fact2 more
    (23) more -> .
    (25) op -> . AND
    (26) op -> . OR

    $end            reduce using rule 23 (more -> .)
    AND             shift and go to state 37
    OR              shift and go to state 38

    more                           shift and go to state 35
    op                             shift and go to state 36

state 24

    (8) exp -> DISPLAY logalg .

    $end            reduce using rule 8 (exp -> DISPLAY logalg .)


state 25

    (14) fact -> ENT ENT . ENT
    (17) fact -> ENT ENT . NOT ENT

    ENT             shift and go to state 39
    NOT             shift and go to state 40


state 26

    (16) fact -> ENT NOT . ENT ENT

    ENT             shift and go to state 41


state 27

    (15) fact -> NOT ENT . ENT ENT

    ENT             shift and go to state 42


state 28

    (18) rule -> IF logalg2 . THEN conj2

    THEN            shift and go to state 43


state 29

    (19) logalg2 -> fact3 . more2
    (22) more2 -> . op2 fact3 more2
    (24) more2 -> .
    (27) op2 -> . AND
    (28) op2 -> . OR

    THEN            reduce using rule 24 (more2 -> .)
    AND             shift and go to state 46
    OR              shift and go to state 47

    more2                          shift and go to state 44
    op2                            shift and go to state 45

state 30

    (33) fact3 -> el . el el
    (34) el -> . ENT
    (35) el -> . NOT ENT
    (36) el -> . VAR

    ENT             shift and go to state 16
    NOT             shift and go to state 17
    VAR             shift and go to state 18

    el                             shift and go to state 48

state 31

    (4) exp -> DELETE RULES numlist .

    $end            reduce using rule 4 (exp -> DELETE RULES numlist .)


state 32

    (5) numlist -> NUM . numlist
    (5) numlist -> . NUM numlist
    (6) numlist -> .

    NUM             shift and go to state 32
    $end            reduce using rule 6 (numlist -> .)

    numlist                        shift and go to state 49

state 33

    (32) fact2 -> el el . el
    (34) el -> . ENT
    (35) el -> . NOT ENT
    (36) el -> . VAR

    ENT             shift and go to state 16
    NOT             shift and go to state 17
    VAR             shift and go to state 18

    el                             shift and go to state 50

state 34

    (35) el -> NOT ENT .

    ENT             reduce using rule 35 (el -> NOT ENT .)
    NOT             reduce using rule 35 (el -> NOT ENT .)
    VAR             reduce using rule 35 (el -> NOT ENT .)
    $end            reduce using rule 35 (el -> NOT ENT .)
    AND             reduce using rule 35 (el -> NOT ENT .)
    OR              reduce using rule 35 (el -> NOT ENT .)
    THEN            reduce using rule 35 (el -> NOT ENT .)


state 35

    (20) logalg -> fact2 more .

    $end            reduce using rule 20 (logalg -> fact2 more .)


state 36

    (21) more -> op . fact2 more
    (32) fact2 -> . el el el
    (34) el -> . ENT
    (35) el -> . NOT ENT
    (36) el -> . VAR

    ENT             shift and go to state 16
    NOT             shift and go to state 17
    VAR             shift and go to state 18

    fact2                          shift and go to state 51
    el                             shift and go to state 15

state 37

    (25) op -> AND .

    ENT             reduce using rule 25 (op -> AND .)
    NOT             reduce using rule 25 (op -> AND .)
    VAR             reduce using rule 25 (op -> AND .)


state 38

    (26) op -> OR .

    ENT             reduce using rule 26 (op -> OR .)
    NOT             reduce using rule 26 (op -> OR .)
    VAR             reduce using rule 26 (op -> OR .)


state 39

    (14) fact -> ENT ENT ENT .

    $end            reduce using rule 14 (fact -> ENT ENT ENT .)


state 40

    (17) fact -> ENT ENT NOT . ENT

    ENT             shift and go to state 52


state 41

    (16) fact -> ENT NOT ENT . ENT

    ENT             shift and go to state 53


state 42

    (15) fact -> NOT ENT ENT . ENT

    ENT             shift and go to state 54


state 43

    (18) rule -> IF logalg2 THEN . conj2
    (29) conj2 -> . fact3 moreconj2
    (33) fact3 -> . el el el
    (34) el -> . ENT
    (35) el -> . NOT ENT
    (36) el -> . VAR

    ENT             shift and go to state 16
    NOT             shift and go to state 17
    VAR             shift and go to state 18

    conj2                          shift and go to state 55
    fact3                          shift and go to state 56
    el                             shift and go to state 30

state 44

    (19) logalg2 -> fact3 more2 .

    THEN            reduce using rule 19 (logalg2 -> fact3 more2 .)


state 45

    (22) more2 -> op2 . fact3 more2
    (33) fact3 -> . el el el
    (34) el -> . ENT
    (35) el -> . NOT ENT
    (36) el -> . VAR

    ENT             shift and go to state 16
    NOT             shift and go to state 17
    VAR             shift and go to state 18

    fact3                          shift and go to state 57
    el                             shift and go to state 30

state 46

    (27) op2 -> AND .

    ENT             reduce using rule 27 (op2 -> AND .)
    NOT             reduce using rule 27 (op2 -> AND .)
    VAR             reduce using rule 27 (op2 -> AND .)


state 47

    (28) op2 -> OR .

    ENT             reduce using rule 28 (op2 -> OR .)
    NOT             reduce using rule 28 (op2 -> OR .)
    VAR             reduce using rule 28 (op2 -> OR .)


state 48

    (33) fact3 -> el el . el
    (34) el -> . ENT
    (35) el -> . NOT ENT
    (36) el -> . VAR

    ENT             shift and go to state 16
    NOT             shift and go to state 17
    VAR             shift and go to state 18

    el                             shift and go to state 58

state 49

    (5) numlist -> NUM numlist .

    $end            reduce using rule 5 (numlist -> NUM numlist .)


state 50

    (32) fact2 -> el el el .

    $end            reduce using rule 32 (fact2 -> el el el .)
    AND             reduce using rule 32 (fact2 -> el el el .)
    OR              reduce using rule 32 (fact2 -> el el el .)


state 51

    (21) more -> op fact2 . more
    (21) more -> . op fact2 more
    (23) more -> .
    (25) op -> . AND
    (26) op -> . OR

    $end            reduce using rule 23 (more -> .)
    AND             shift and go to state 37
    OR              shift and go to state 38

    op                             shift and go to state 36
    more                           shift and go to state 59

state 52

    (17) fact -> ENT ENT NOT ENT .

    $end            reduce using rule 17 (fact -> ENT ENT NOT ENT .)


state 53

    (16) fact -> ENT NOT ENT ENT .

    $end            reduce using rule 16 (fact -> ENT NOT ENT ENT .)


state 54

    (15) fact -> NOT ENT ENT ENT .

    $end            reduce using rule 15 (fact -> NOT ENT ENT ENT .)


state 55

    (18) rule -> IF logalg2 THEN conj2 .

    $end            reduce using rule 18 (rule -> IF logalg2 THEN conj2 .)


state 56

    (29) conj2 -> fact3 . moreconj2
    (30) moreconj2 -> . AND fact3 moreconj2
    (31) moreconj2 -> .

    AND             shift and go to state 61
    $end            reduce using rule 31 (moreconj2 -> .)

    moreconj2                      shift and go to state 60

state 57

    (22) more2 -> op2 fact3 . more2
    (22) more2 -> . op2 fact3 more2
    (24) more2 -> .
    (27) op2 -> . AND
    (28) op2 -> . OR

    THEN            reduce using rule 24 (more2 -> .)
    AND             shift and go to state 46
    OR              shift and go to state 47

    op2                            shift and go to state 45
    more2                          shift and go to state 62

state 58

    (33) fact3 -> el el el .

    AND             reduce using rule 33 (fact3 -> el el el .)
    OR              reduce using rule 33 (fact3 -> el el el .)
    THEN            reduce using rule 33 (fact3 -> el el el .)
    $end            reduce using rule 33 (fact3 -> el el el .)


state 59

    (21) more -> op fact2 more .

    $end            reduce using rule 21 (more -> op fact2 more .)


state 60

    (29) conj2 -> fact3 moreconj2 .

    $end            reduce using rule 29 (conj2 -> fact3 moreconj2 .)


state 61

    (30) moreconj2 -> AND . fact3 moreconj2
    (33) fact3 -> . el el el
    (34) el -> . ENT
    (35) el -> . NOT ENT
    (36) el -> . VAR

    ENT             shift and go to state 16
    NOT             shift and go to state 17
    VAR             shift and go to state 18

    fact3                          shift and go to state 63
    el                             shift and go to state 30

state 62

    (22) more2 -> op2 fact3 more2 .

    THEN            reduce using rule 22 (more2 -> op2 fact3 more2 .)


state 63

    (30) moreconj2 -> AND fact3 . moreconj2
    (30) moreconj2 -> . AND fact3 moreconj2
    (31) moreconj2 -> .

    AND             shift and go to state 61
    $end            reduce using rule 31 (moreconj2 -> .)

    moreconj2                      shift and go to state 64

state 64

    (30) moreconj2 -> AND fact3 moreconj2 .

    $end            reduce using rule 30 (moreconj2 -> AND fact3 moreconj2 .)

